updates on gralde, spring boot versions, updates on typed query builder